--- a/Conda-Env/sipeo_so2sat_demo_env.yml
+++ b/Conda-Env/sipeo_so2sat_demo_env.yml
@@ -1,31 +1,54 @@
 name: sipeo_so2sat_demo
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - _tflow_select=2.3.0=mkl
+  - absl-py=0.10.0=py38h32f6830_0
+  - astor=0.8.1=pyh9f0ad1d_0
+  - astunparse=1.6.3=py_0
   - blas=1.0=mkl
+  - blinker=1.4=py_1
+  - brotlipy=0.7.0=py38h1e0a361_1000
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2020.7.22=0
+  - c-ares=1.16.1=h516909a_3
+  - ca-certificates=2020.6.20=hecda079_0
+  - cachetools=4.1.1=py_0
   - cairo=1.14.12=h8948797_3
-  - certifi=2020.6.20=py38_0
+  - certifi=2020.6.20=py38h32f6830_0
+  - cffi=1.14.1=py38h5bae8af_0
   - cfitsio=3.470=hb7c8383_2
+  - chardet=3.0.4=py38h32f6830_1006
+  - click=7.1.2=pyh9f0ad1d_0
+  - cryptography=3.1=py38h766eaa4_0
   - curl=7.67.0=hbc83047_0
   - expat=2.2.9=he6710b0_2
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.10.2=h5ab3b9f_0
   - freexl=1.0.5=h14c3975_0
+  - gast=0.3.3=py_0
   - gdal=3.0.2=py38hbb2a789_0
   - geos=3.8.0=he6710b0_0
   - geotiff=1.5.1=h21e8280_1
   - giflib=5.1.4=h14c3975_1
   - glib=2.63.1=h5a9c865_0
+  - google-auth=1.21.1=py_0
+  - google-auth-oauthlib=0.4.1=py_2
+  - google-pasta=0.2.0=pyh8c360ce_0
+  - grpcio=1.31.0=py38h2c89da0_0
+  - h5py=2.10.0=py38h7918eee_0
   - hdf4=4.2.13=h3ca952b_2
   - hdf5=1.10.4=hb1b8bf9_0
   - icu=58.2=he6710b0_3
+  - idna=2.10=pyh9f0ad1d_0
+  - importlib-metadata=1.7.0=py38h32f6830_0
   - intel-openmp=2020.2=254
   - jpeg=9b=h024ee3a_2
   - json-c=0.13.1=h1bed415_0
   - kealib=1.4.7=hd0c454d_6
+  - keras=2.4.3=py_0
+  - keras-preprocessing=1.1.0=py_0
   - krb5=1.16.4=h173b8e3_0
   - ld_impl_linux-64=2.33.1=h53a641e_7
   - libboost=1.67.0=h46d08c1_4
@@ -40,6 +63,7 @@ dependencies:
   - libnetcdf=4.6.1=h11d0813_2
   - libpng=1.6.37=hbc83047_0
   - libpq=11.2=h20c2e04_0
+  - libprotobuf=3.13.0=h8b12597_0
   - libspatialite=4.3.0a=h793db0d_0
   - libssh2=1.9.0=h1ba5d50_1
   - libstdcxx-ng=9.1.0=hdf63c60_0
@@ -48,6 +72,7 @@ dependencies:
   - libxcb=1.14=h7b6447c_0
   - libxml2=2.9.10=he19cac6_1
   - lz4-c=1.8.1.2=h14c3975_0
+  - markdown=3.2.2=py_0
   - mkl=2020.2=256
   - mkl-service=2.3.0=py38he904b0f_0
   - mkl_fft=1.1.0=py38h23d657b_0
@@ -55,8 +80,10 @@ dependencies:
   - ncurses=6.2=he6710b0_1
   - numpy=1.19.1=py38hbc911f0_0
   - numpy-base=1.19.1=py38hfa32c7d_0
+  - oauthlib=3.0.1=py_0
   - openjpeg=2.3.0=h05c96fa_1
-  - openssl=1.1.1g=h7b6447c_0
+  - openssl=1.1.1g=h516909a_1
+  - opt_einsum=3.3.0=py_0
   - pandas=1.1.1=py38he6710b0_0
   - pcre=8.44=he6710b0_0
   - pip=20.2.2=py38_0
@@ -65,32 +92,51 @@ dependencies:
   - poppler-data=0.4.9=0
   - postgresql=11.2=h20c2e04_0
   - proj=6.2.1=haa6030c_0
+  - protobuf=3.13.0=py38h950e882_0
+  - pyasn1=0.4.8=py_0
+  - pyasn1-modules=0.2.7=py_0
+  - pycparser=2.20=pyh9f0ad1d_2
+  - pyjwt=1.7.1=py_0
+  - pyopenssl=19.1.0=py_1
+  - pysocks=1.7.1=py38h32f6830_1
   - python=3.8.2=h191fe78_0
   - python-dateutil=2.8.1=py_0
+  - python_abi=3.8=1_cp38
   - pytz=2020.1=py_0
+  - pyyaml=5.3.1=py38h1e0a361_0
   - readline=7.0=h7b6447c_5
+  - requests=2.24.0=pyh9f0ad1d_0
+  - requests-oauthlib=1.3.0=pyh9f0ad1d_0
+  - rsa=4.6=pyh9f0ad1d_0
+  - scipy=1.5.2=py38h0b6359f_0
   - setuptools=49.6.0=py38_0
   - shapely=1.7.0=py38h98ec03d_0
   - six=1.15.0=py_0
   - sqlite=3.33.0=h62c20be_0
   - tbb=2018.0.5=h6bb024c_0
+  - tensorboard=2.3.0=py_0
+  - tensorboard-plugin-wit=1.6.0=pyh9f0ad1d_0
+  - tensorflow=2.2.0=mkl_py38h6d3daf0_0
+  - tensorflow-base=2.2.0=mkl_py38h5059a2d_0
+  - tensorflow-estimator=2.2.0=pyh95af2a2_0
+  - termcolor=1.1.0=py_2
   - tiledb=1.6.3=h1fb8f14_0
   - tk=8.6.10=hbc83047_0
+  - urllib3=1.25.10=py_0
+  - werkzeug=1.0.1=pyh9f0ad1d_0
   - wheel=0.35.1=py_0
+  - wrapt=1.12.1=py38h1e0a361_1
   - xerces-c=3.2.2=h780794e_0
   - xz=5.2.5=h7b6447c_0
+  - yaml=0.2.5=h516909a_0
+  - zipp=3.1.0=py_0
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
-    - chardet==3.0.4
-    - click==7.1.2
     - geojson==2.5.0
     - geomet==0.2.1.post1
     - html2text==2020.1.16
-    - idna==2.10
-    - requests==2.24.0
     - sentinelsat==0.14
     - tqdm==4.48.2
-    - urllib3==1.25.10
-prefix: /home/jingliang/software/anaconda2/envs/sipeo_so2sat_demo
+prefix: /home/hu/software/anaconda3.7/envs/sipeo_so2sat_demo
 
